--- a/assets/custom/style.css
+++ b/assets/custom/style.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
     padding: 0;
     margin: 0;
-    height: 100%;
+    height: 650px;
     width: 100%;
     overflow: hidden;
 }
@@ -11,12 +11,14 @@ body {
     background-color: #ccf8d1!important;
 }
 #map {
-    position: absolute;
+    /* position: absolute;
     right: 0;
     left: 0;
     top: 0;
-    bottom: 0;
+    bottom: 0; */
     /* padding: 5px; */
+    height: 100%;
+    width: 100%;
     margin: 5px;
     background-color: #ccf8d1;
 }
@@ -24,12 +26,13 @@ body {
     position: absolute;
     right: 0;
     left: 70%;
-    top: 60px;
-    bottom: 0;
+    top: 10px;
+    /* bottom: 0; */
     margin: 5px 5px 5px 0;
     border: dotted #82bd03;
     background-color: #ccf8d1;
     z-index: 400;
+    height: 620px;
     overflow-y: auto;
 }
 #icon {
